generate header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="container ">
-  <h1>HI VINUL</h1>
-<h1>Sewwandi</h1>
-<button type="button" class="btn btn-danger">Danger</button>
+  <div class="row ">
+    <app-header></app-header>
+  </div>
+  <div class="row"></div>
+
+
+
+
 </div>
