--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<div class="container ">
-  <div class="row ">
+<div class="container">
+  <div class="row">
     <app-header></app-header>
   </div>
-  <div class="row"></div>
-
-
-
-
+  <div class="row">
+    <div class="col-3">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-9">
+     
+    </div>
+  </div>
 </div>
