--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <app-side-bar></app-side-bar>
     </div>
     <div class="col-9">
-      <app-book-list></app-book-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
