--- a/src/app/comman/side-bar/side-bar.component.html
+++ b/src/app/comman/side-bar/side-bar.component.html
@@ -13,7 +13,7 @@
   <hr />
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
-      <a href="#" class="nav-link active" aria-current="page">
+      <a href="" class="nav-link link-body-emphasis  " aria-current="page">
         <svg class="bi pe-none me-2" width="16" height="16">
           <use xlink:href="#home" />
         </svg>
@@ -22,7 +22,7 @@
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
+      <a href="/bookList" class="nav-link link-body-emphasis">
         <svg class="bi pe-none me-2" width="16" height="16">
           <use xlink:href="#speedometer2" />
         </svg>
