--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -1,28 +1,31 @@
-
 <div class="table-responsive small">
-    <br>
-    <table class="table table-striped table-sm">
-      <thead>
-        <tr>
-          <th scope="col">No</th>
-          <th scope="col">ISBN</th>
-          <th scope="col">Title</th>
-          <th scope="col">Category</th>
-          <th scope="col">QTY</th>
-          <th scope="col">Price</th>
-
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let book of bookList; let i=index" >
-          <td>{{i+1}}</td>
-          <td>{{book.isbn}}</td>
-          <td>{{book.title}}</td>
-          <td>{{book.category}}</td>
-          <td>{{book.qty}}</td>
-          <td>{{book.price}}</td>
-        </tr>
-    
-      </tbody>
-    </table>
-  </div>
+  <br />
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th scope="col" class="text-center">No</th>
+        <th scope="col" class="text-center">ISBN</th>
+        <th scope="col" class="text-center">Title</th>
+        <th scope="col" class="text-center">Category</th>
+        <th scope="col" class="text-center">QTY</th>
+        <th scope="col" class="text-center">Price</th>
+        <th scope="col " class="text-center">Option</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let book of bookList; let i = index">
+        <td class="text-center">{{ i + 1 }}</td>
+        <td class="text-center">{{ book.isbn }}</td>
+        <td class="text-center">{{ book.title }}</td>
+        <td class="text-center">{{ book.category }}</td>
+        <td class="text-center">{{ book.qty }}</td>
+        <td class="text-center">{{ book.price }}</td>
+        <td class="text-center">
+          <button type="button" class="btn btn-outline-danger ">
+            <i class="bi bi-trash3-fill"></i> Remove
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
