--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -9,20 +9,25 @@
         <th scope="col" class="text-center">Category</th>
         <th scope="col" class="text-center">QTY</th>
         <th scope="col" class="text-center">Price</th>
-        <th scope="col " class="text-center">Option</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let book of bookList; let i = index">
-        <td class="text-center">{{ i + 1 }}</td>
+        <td class="text-center ">{{ i + 1 }}</td>
         <td class="text-center">{{ book.isbn }}</td>
         <td class="text-center">{{ book.title }}</td>
         <td class="text-center">{{ book.category }}</td>
         <td class="text-center">{{ book.qty }}</td>
         <td class="text-center">{{ book.price }}</td>
-        <td class="text-center">
-          <button type="button" class="btn btn-outline-danger ">
-            <i class="bi bi-trash3-fill"></i> Remove
+        <td class="">
+          
+          <button type="button" class="btn btn-outline-danger mx-3">
+            <i class="bi bi-trash3-fill"></i> 
+          </button>
+
+          <button type="button" class="btn btn-outline-primary">
+            <i class="bi bi-pencil-square"></i> 
           </button>
         </td>
       </tr>
