--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -1,5 +1,4 @@
 <div class="table-responsive small">
-  <br />
   <table class="table table-striped table-sm">
     <thead>
       <tr>
@@ -14,23 +13,67 @@
     </thead>
     <tbody>
       <tr *ngFor="let book of bookList; let i = index">
-        <td class="text-center ">{{ i + 1 }}</td>
+        <td class="text-center">{{ i + 1 }}</td>
         <td class="text-center">{{ book.isbn }}</td>
         <td class="text-center">{{ book.title }}</td>
         <td class="text-center">{{ book.category }}</td>
         <td class="text-center">{{ book.qty }}</td>
         <td class="text-center">{{ book.price }}</td>
-        <td class="">
-          
-          <button type="button" class="btn btn-outline-danger mx-3">
-            <i class="bi bi-trash3-fill"></i> 
+        <td>
+          <button
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            type="button"
+            (click)="setSelectBook(book)"
+            class="btn btn-outline-danger mx-3"
+          >
+            <i class="bi bi-trash3-fill"></i>
           </button>
 
           <button type="button" class="btn btn-outline-primary">
-            <i class="bi bi-pencil-square"></i> 
+            <i class="bi bi-pencil-square"></i>
           </button>
         </td>
       </tr>
     </tbody>
   </table>
+</div>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Do You Want To Delete Book
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <p>
+          Book_ID : {{ selectBook.id }} <br />
+          Book Title : {{ selectBook.title }}
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+          No
+        </button>
+        <button type="button" (click)="removeBook()" class="btn btn-danger" data-bs-dismiss="modal">
+          Yes
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
