--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="containe-  ">
-  <header class="p-4  text-bg-dark   ">
+<div class="containe">
+  <header class="p-4  text-bg-dark  ">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
