--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -1,4 +1,5 @@
 <div class="table-responsive small">
+  
   <table class="table table-striped table-sm">
     <thead>
       <tr>
@@ -13,7 +14,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let book of bookList; let i = index">
-        <td class="text-center">{{ i + 1 }}</td>
+        <td class="text-center">#BN{{ i + 1 }}</td>
         <td class="text-center">{{ book.isbn }}</td>
         <td class="text-center">{{ book.title }}</td>
         <td class="text-center">{{ book.category }}</td>
@@ -30,7 +31,13 @@
             <i class="bi bi-trash3-fill"></i>
           </button>
 
-          <button type="button" class="btn btn-outline-primary">
+          <button
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal2"
+            type="button"
+            (click)="setSelectBook(book)"
+            class="btn btn-outline-primary"
+          >
             <i class="bi bi-pencil-square"></i>
           </button>
         </td>
@@ -70,9 +77,111 @@
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
           No
         </button>
-        <button type="button" (click)="removeBook()" class="btn btn-danger" data-bs-dismiss="modal">
+        <button
+          type="button"
+          (click)="removeBook()"
+          class="btn btn-danger"
+          data-bs-dismiss="modal"
+        >
           Yes
         </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="exampleModal2"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-3">
+          <div class="col-12">
+            <label for="firstName" class="form-label fw-bold ">ISBN</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              placeholder=""
+              value=""
+              [(ngModel)]="selectBook.isbn"
+
+            />
+          </div>
+
+          <div class="col-12">
+            <label for="lastName" class="form-label fw-bold">Title</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              placeholder=""
+              value=""
+              [(ngModel)]="selectBook.title"
+            />
+          </div>
+
+          <div class="col-12">
+            <label for="username" class="form-label fw-bold">Category</label>
+            <div class="input-group has-validation">
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                placeholder=""
+                [(ngModel)]="selectBook.category"
+              />
+            </div>
+          </div>
+          <div class="col-12">
+            <label for="username" class="form-label fw-bold">QTY</label>
+            <div class="input-group has-validation">
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                placeholder=""
+                [(ngModel)]="selectBook.qty"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <label for="username" class="form-label fw-bold" >Price</label>
+          <div class="input-group has-validation">
+            <input
+              type="text"
+              class="form-control"
+              id="username"
+              placeholder=""
+              [(ngModel)]="selectBook.price"
+            />
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary  "
+            data-bs-dismiss="modal"
+          >
+            Close
+          </button>
+          <button type="button" (click)="updataBook();" class="btn btn-primary " data-bs-dismiss="modal">Updata</button>
+        </div>
       </div>
     </div>
   </div>
