modifier update button

--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="containe">
+<div class="containe position-sticky top-0 ">
   <header class="p-4  text-bg-dark  ">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
