--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -21,10 +21,8 @@
         <td class="text-center">{{ book.price }}</td>
         <td>
           <button
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
             type="button"
-            (click)="setSelectBook(book)"
+            (click)="deleteConfimationAlet(book)"
             class="btn btn-outline-danger mx-3"
           >
             <i class="bi bi-trash3-fill"></i>
@@ -32,7 +30,7 @@
 
           <button
             data-bs-toggle="modal"
-            data-bs-target="#exampleModal2"
+            data-bs-target="#updateModal2"
             type="button"
             (click)="setSelectBook(book)"
             class="btn btn-outline-primary"
@@ -49,7 +47,7 @@
 <!--Updata Modal-->
 <div
   class="modal fade"
-  id="exampleModal2"
+  id="updateModal2"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
