--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -20,7 +20,7 @@
 
         <div class="text-end">
           <button  type="button" class="btn btn-primary  me-2" [routerLink]="['/login']"  >Login </button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-warning" [routerLink]="['/signUp']">Sign-up</button>
         </div>
       </div>
     </div>
