--- a/src/app/page/sign-up/sign-up.component.html
+++ b/src/app/page/sign-up/sign-up.component.html
@@ -104,7 +104,7 @@
               <label for="country" class="form-label">Country</label>
               <select class="form-select" id="country" required>
                 <option value="">Choose...</option>
-                <option>United States</option>
+                <option *ngFor="let country of contrieList">{{country.flag}} {{country.name.common}}</option>
               </select>
               <div class="invalid-feedback">Please select a valid country.</div>
             </div>
