--- a/src/app/page/sign-up/sign-up.component.html
+++ b/src/app/page/sign-up/sign-up.component.html
@@ -26,110 +26,114 @@
   </div>
 
   <div class="row">
-    <div class="col-2 "></div>
-    <div class="col-8   ">
-      
-        <form class="needs-validation" novalidate>
-          <div class="row g-3">
-            <div class="col-sm-6">
-              <label for="firstName" class="form-label">First name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="firstName"
-                placeholder=""
-                value=""
-                required
-              />
-              <div class="invalid-feedback">Valid first name is required.</div>
-            </div>
+    <div class="col-2"></div>
+    <div class="col-8">
+      <form class="needs-validation" novalidate>
+        <div class="row g-3">
+          <div class="col-sm-6">
+            <label for="firstName" class="form-label">First name<sup> *</sup></label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              placeholder=""
+              value=""
+              required
+            />
+            <div class="invalid-feedback">Valid first name is required.</div>
+          </div>
 
-            <div class="col-sm-6">
-              <label for="lastName" class="form-label">Last name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="lastName"
-                placeholder=""
-                value=""
-                required
-              />
-              <div class="invalid-feedback">Valid last name is required.</div>
-            </div>
+          <div class="col-sm-6">
+            <label for="lastName" class="form-label">Last name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              placeholder=""
+              value=""
+              required
+            />
+            <div class="invalid-feedback">Valid last name is required.</div>
+          </div>
 
-            <div class="col-12">
-              <label for="email" class="form-label"> Username </label>
-              <input type="email" class="form-control" id="userName" />
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
-            </div>
-
-            <div class="col-12">
-              <label for="email" class="form-label">Email </label>
-              <input type="email" class="form-control" id="email" />
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
-            </div>
-
-            <div class="col-12">
-              <label for="address" class="form-label">Address</label>
-              <input
-                type="text"
-                class="form-control"
-                id="address"
-                placeholder=""
-                required
-              />
-              <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
-            </div>
-
-            <div class="col-12">
-              <label for="address2" class="form-label"
-                >Address 2
-                <span class="text-body-secondary">(Optional)</span></label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="address2"
-                placeholder=""
-              />
-            </div>
-
-            <div class="col-md-5">
-              <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option *ngFor="let country of contrieList">{{country.flag}} {{country.name.common}}</option>
-              </select>
-              <div class="invalid-feedback">Please select a valid country.</div>
-            </div>
-
-            <div class="col-md-5">
-              <label for="state" class="form-label">Contact Number</label>
-              <input
-                type="text"
-                class="form-control"
-                id="contactNumber"
-                placeholder=""
-                required
-              />
-              <div class="invalid-feedback">Please provide a valid state.</div>
+          <div class="col-12">
+            <label for="email" class="form-label"> Username </label>
+            <input type="email" class="form-control" id="userName" />
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
             </div>
           </div>
 
-          <hr class="my-4" />
+          <div class="col-12">
+            <label for="email" class="form-label">Email </label>
+            <input type="email" class="form-control" id="email" />
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
+            </div>
+          </div>
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit">
-            Continue to checkout
-          </button>
-        </form>
-      </div>
-    
+          <div class="col-12">
+            <label for="address" class="form-label">Address</label>
+            <input
+              type="text"
+              class="form-control"
+              id="address"
+              placeholder=""
+              required
+            />
+            <div class="invalid-feedback">
+              Please enter your shipping address.
+            </div>
+          </div>
+
+          <div class="col-12">
+            <label for="address2" class="form-label"
+              >Address 2
+              <span class="text-body-secondary">(Optional)</span></label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="address2"
+              placeholder=""
+            />
+          </div>
+
+          <div class="col-md-5">
+            <label for="country" class="form-label">Country</label>
+            <select class="form-select" id="country" required>
+              <option value="">Choose...</option>
+              <option
+                (click)="setCountry(country)"
+                *ngFor="let country of contrieList"
+              >
+                {{ country.flag }} {{ country.name.common }}
+              </option>
+            </select>
+            <div class="invalid-feedback">Please select a valid country.</div>
+          </div>
+
+          <div class="col-md-5">
+            <label for="state" class="form-label">Contact Number</label>
+            <input
+              type="text"
+              class="form-control"
+              id="contactNumber"
+              placeholder=""
+              [(ngModel)]="selectCountry?.idd.root"
+              [ngModelOptions]="{standalone:true}"
+            />
+            <div class="invalid-feedback">Please provide a valid state.</div>
+          </div>
+        </div>
+
+        <hr class="my-4" />
+
+        <button class="w-100 btn btn-primary btn-lg" type="submit">
+           Submit
+        </button>
+      </form>
+    </div>
   </div>
 
   <div class="row">
