--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-5">
   <div class="col-3"></div>
 
-  <div class="col-6 text-center ">
+  <div class="col-6 text-center">
     <form>
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -12,9 +12,9 @@
           id="floatingInput"
           placeholder="name@example.com"
         />
-        <label for="floatingInput">Email address</label>
+        <label for="floatingInput">User name</label>
       </div>
-      <br>
+      <br />
       <div class="form-floating">
         <input
           type="password"
