--- a/src/app/page/sign-up/sign-up.component.html
+++ b/src/app/page/sign-up/sign-up.component.html
@@ -38,7 +38,9 @@
               id="firstName"
               placeholder=""
               value=""
-              required
+              [(ngModel)]="borrower.firstName"
+              
+              [ngModelOptions]="{standalone:true}"
             />
             <div class="invalid-feedback">Valid first name is required.</div>
           </div>
@@ -51,14 +53,23 @@
               id="lastName"
               placeholder=""
               value=""
-              required
+              [(ngModel)]="borrower.lastName"
+              [ngModelOptions]="{standalone:true}"
             />
             <div class="invalid-feedback">Valid last name is required.</div>
           </div>
 
           <div class="col-12">
             <label for="email" class="form-label"> Username </label>
-            <input type="email" class="form-control" id="userName" />
+            <input type="text" class="form-control" id="userName" [(ngModel)]="borrower.username" [ngModelOptions]="{standalone:true}" />
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
+            </div>
+          </div>
+
+          <div class="col-12">
+            <label for="password" class="form-label"> Password </label>
+            <input type="text" class="form-control" id="password" [(ngModel)]="borrower.password" [ngModelOptions]="{standalone:true}"/>
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
@@ -66,7 +77,7 @@
 
           <div class="col-12">
             <label for="email" class="form-label">Email </label>
-            <input type="email" class="form-control" id="email" />
+            <input type="email" class="form-control" id="email" [(ngModel)]="borrower.email" [ngModelOptions]="{standalone:true}" />
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
@@ -79,35 +90,27 @@
               class="form-control"
               id="address"
               placeholder=""
-              required
+              [(ngModel)]="borrower.address"
+              [ngModelOptions]="{standalone:true}"
             />
             <div class="invalid-feedback">
               Please enter your shipping address.
             </div>
           </div>
 
-          <div class="col-12">
-            <label for="address2" class="form-label"
-              >Address 2
-              <span class="text-body-secondary">(Optional)</span></label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="address2"
-              placeholder=""
-            />
-          </div>
+         
 
           <div class="col-md-5">
             <label for="country" class="form-label">Country</label>
             <select class="form-select" id="country" required>
               <option value="">Choose...</option>
               <option
+                
                 (click)="setCountry(country)"
                 *ngFor="let country of contrieList"
               >
                 {{ country.flag }} {{ country.name.common }}
+                
               </option>
             </select>
             <div class="invalid-feedback">Please select a valid country.</div>
@@ -122,6 +125,7 @@
               placeholder=""
               [(ngModel)]="selectCountry?.idd.root"
               [ngModelOptions]="{standalone:true}"
+              [(ngModel)]="borrower.phoneNum"
             />
             <div class="invalid-feedback">Please provide a valid state.</div>
           </div>
@@ -129,7 +133,7 @@
 
         <hr class="my-4" />
 
-        <button class="w-100 btn btn-primary btn-lg" type="submit">
+        <button class="w-100 btn btn-primary btn-lg" type="submit" (click)="registerBorrower()">
            Submit
         </button>
       </form>
