--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -9,7 +9,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="" class="nav-link px-2 text-white ">Home</a></li>
           <li><a href="/bookList" class="nav-link px-2 text-white">Book</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Borrowers</a></li>
+          <li><a href="/borrowerList" class="nav-link px-2 text-white">Borrowers</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Staff</a></li>
      
         </ul>
