--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,14 +1,198 @@
 <div class="row">
   <app-header></app-header>
 </div>
-<div class="container ">
+<div class="container  ">
   <div class="row">
-    <div class="col-4">
+    <div class="col-3">
       <br />
       <app-side-bar></app-side-bar>
     </div>
-    <div class="col-8">
-      <p>home works!</p>
+    <div class="col-9 ">
+      <br />
+      <div id="carouselExampleIndicators" class="carousel slide w-100 h-100">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/50th.png" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/img/icnatlib2024.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/img/lets_read.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="assets/img/apply_online.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/gov_pub.jpg" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
   </div>
+  <hr />
+  <br />
+  <br /><br />
+  <div class="row">
+    <table>
+      <tr>
+        <td>
+          <a href="http://www.natlib.lk/our_services/isbn_numbering.php">
+            <div class="card" style="width: 18rem">
+              <img src="assets/img/1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text text-center">
+                  ISBN ISSN ISMN <br />National Agency-Sri Lanka
+                </p>
+              </div>
+            </div>
+          </a>
+        </td>
+        <td>
+          <a href="http://www.natlib.lk/home/ifla_pac.php"
+            ><div class="card" style="width: 18rem">
+              <img src="assets/img/2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text text-center">
+                  IFLI-PAC Center <br />
+                  Sri Lanka
+                </p>
+              </div>
+            </div></a
+          >
+        </td>
+        <td>
+          <a href="http://www.natlib.lk/home/mow.php">
+            <div class="card" style="width: 18rem">
+              <img src="assets/img/3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text text-center">
+                  UNESCO-MOW <br />
+                  National Focal Point - Sri Lanka
+                </p>
+              </div>
+            </div></a
+          >
+        </td>
+        <td>
+          <a href="http://www.natlib.lk/home/ich.php"
+            ><div class="card" style="width: 18rem">
+              <img src="assets/img/4.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text text-center">
+                  UNESCO - ICH <br />
+                  National Focal Point - Sri Lanka
+                </p>
+              </div>
+            </div></a
+          >
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <!--Footer Start-->
+
+  <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top bg-light">
+    <div class="col m-4">
+      <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      </a>
+      <p class="text-body-secondary">&copy; 2024 NLDSB » National Library and Documentation Services Board of Sri Lanka. All Rights Reserved.</p>
+    </div>
+ <div class="col m-4"></div>
+    
+
+    <div class="col m-4">
+      <h5 class="text-decoration-underline text-black">Contact US</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2">+94761693539</li>
+        <li class="nav-item mb-2">National Library and Documentation
+          Services Board
+          No 14, Independence Avenue
+          Colombo 07
+          Sri Lanka</li>
+        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-body-secondary">Opening Hours</a></li>
+        
+      </ul>
+    </div>
+
+    <div class="col m-4">
+      <h5 class="text-decoration-underline text-black">Connect</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="https://www.facebook.com/natliblk/" class="nav-link p-0 text-body-secondary"><img src="assets/img/fb.png" alt=""> Facebook</a></li>
+        <li class="nav-item mb-2"><a href="http://www.natlib.lk/#" class="nav-link p-0 text-body-secondary"><img src="assets/img/twitter.png" alt=""> Twitter </a></li>
+        <li class="nav-item mb-2"><a href="https://www.youtube.com/channel/UC263Gyih_Jp0sodYT3wYAGQ" class="nav-link p-0 text-body-secondary"><img src="assets/img/youtube.png" alt=""> You Tube </a></li>
+       
+      </ul>
+    </div>
+
+    
+  </footer>
+  <!--Footer End-->
 </div>
+
