creat login form

--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -9,7 +9,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="" class="nav-link px-2 text-white ">Home</a></li>
           <li><a href="/bookList" class="nav-link px-2 text-white">Book</a></li>
-          <li><a href="/borrowerList" class="nav-link px-2 text-white">Borrowers</a></li>
+          <li><a href="/login" class="nav-link px-2 text-white">Borrowers</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Staff</a></li>
      
         </ul>
@@ -19,8 +19,8 @@
         </form>
 
         <div class="text-end">
-          <button  type="button" class="btn btn-primary  me-2" [routerLink]="['/login']"  >Login </button>
-          <button type="button" class="btn btn-warning" [routerLink]="['/signUp']">Sign-up</button>
+          <button  type="button" class="btn btn-primary  me-2"   >Log Out</button>
+          <button type="button" class="btn btn-warning" [routerLink]="['/signUp']" >Sign-up</button>
         </div>
       </div>
     </div>
