--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -46,7 +46,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/img/50th.png" class="d-block w-100" alt="..." />
+            <img src="assets/img/lets_read.png" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img
@@ -57,7 +57,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets/img/lets_read.png"
+              src="assets/img/50th.png"
               class="d-block w-100"
               alt="..."
             />
