login page design

--- a/src/app/comman/side-bar/side-bar.component.html
+++ b/src/app/comman/side-bar/side-bar.component.html
@@ -1,6 +1,7 @@
 <div
-  class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary"
+  class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary "
   style="width: 280px"
+  
 >
   <a
     href="/"
@@ -13,7 +14,7 @@
   <hr />
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
-      <a href="" class="nav-link link-body-emphasis  " aria-current="page">
+      <a href="/home" class="nav-link link-body-emphasis  " aria-current="page">
         <svg class="bi pe-none me-2" width="16" height="16">
           <use xlink:href="#home" />
         </svg>
@@ -31,7 +32,7 @@
       </a>
     </li>
     <li>
-      <a href="/login" class="nav-link link-body-emphasis">
+      <a href="/borrowerList" class="nav-link link-body-emphasis">
         <svg class="bi pe-none me-2" width="16" height="16">
           <use xlink:href="#table" />
         </svg>
@@ -41,7 +42,7 @@
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
+      <a href="" class="nav-link link-body-emphasis">
         <svg class="bi pe-none me-2" width="16" height="16">
           <use xlink:href="#grid" />
         </svg>
