--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,52 +1,55 @@
-<div class="row m-lg-5 m-md-5">
-  <div class="col-4"></div>
-
-  <div class="col-5 text-center">
-    <form>
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-      <div class="form-floating">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-          [(ngModel)]="loginObj.email"
-          [ngModelOptions]="{standalone:true}"
-        />
-        <label for="floatingInput">Email</label>
-      </div>
-      <br />
-      <div class="form-floating">
-        <input
-          type="password"
-          class="form-control"
-          id="floatingPassword"
-          placeholder="Password"
-          [(ngModel)]="loginObj.password"
-          [ngModelOptions]="{standalone:true}"
-          
-        />
-        <label for="floatingPassword">Password</label>
-      </div>
-
-      <div class="form-check text-start my-3">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value="remember-me"
-          id="flexCheckDefault"
-         
-        />
-        <label class="form-check-label" for="flexCheckDefault">
-          Remember me
-        </label>
-      </div>
-      <button class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Sign in</button>
-      <br>
-      <br>
-      <button class="btn btn-outline-primary text-black w-100 py-2" type="submit" [routerLink]="['/signUp']" >Sign Up</button>
-      <p class="mt-5 mb-3 text-body-secondary">&copy; 2024-2028</p>
-    </form>
+<div class="container ">
+  <br><br><br>
+  <div class="row m-5">
+    <div class="col-4"></div>
+  
+    <div class="col-5 text-center">
+      <form class="shadow p-5 w-99 mx-auto py-5 " >
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+  
+        <div class="form-floating">
+          <input
+            type="email"
+            class="form-control"
+            id="floatingInput"
+            placeholder="name@example.com"
+            [(ngModel)]="loginObj.email"
+            [ngModelOptions]="{standalone:true}"
+          />
+          <label for="floatingInput">Email</label>
+        </div>
+        <br />
+        <div class="form-floating">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+            [(ngModel)]="loginObj.password"
+            [ngModelOptions]="{standalone:true}"
+            
+          />
+          <label for="floatingPassword">Password</label>
+        </div>
+  
+        <div class="form-check text-start my-3">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="remember-me"
+            id="flexCheckDefault"
+           
+          />
+          <label class="form-check-label" for="flexCheckDefault">
+            Remember me
+          </label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Sign in</button>
+        <br>
+        <br>
+        <button class="btn btn-primary text-white w-100 py-2" type="submit" [routerLink]="['/signUp']" >Sign Up</button>
+        <p class="mt-5 mb-3 text-body-secondary">&copy; 2024-2028</p>
+      </form>
+    </div>
   </div>
 </div>
