creat log out button

--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -19,7 +19,7 @@
         </form>
 
         <div class="text-end">
-          <button  type="button" class="btn btn-primary  me-2" [routerLink]="['/login']"  >Log Out</button>
+          <button  type="button" class="btn btn-primary  me-2" (click)="logOut()">Log Out</button>
 
         </div>
       </div>
