--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -48,7 +48,7 @@
         <br>
         <br>
         <button class="btn btn-primary text-white w-100 py-2" type="submit" [routerLink]="['/signUp']" >Sign Up</button>
-        <p class="mt-5 mb-3 text-body-secondary">&copy; 2024-2028</p>
+        <p class="mt-5 mb-3 text-black">&copy; 2024-2028</p>
       </form>
     </div>
   </div>
