--- a/src/app/page/sign-up/sign-up.component.html
+++ b/src/app/page/sign-up/sign-up.component.html
@@ -18,9 +18,9 @@
           d="M4.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H14.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708z"
         />
       </svg>
-      <h2>Sign Up form</h2>
+      <h2><b>Sign Up form</b></h2>
       <p class="lead">
-        By signing up, I agree to the Asana Privacy Policy and Terms of Service.
+        <b><i>By signing up, I agree to the Asana Privacy Policy and Terms of Service.</i></b>
       </p>
     </div>
   </div>
@@ -31,7 +31,9 @@
       <form class="needs-validation" novalidate>
         <div class="row g-3">
           <div class="col-sm-6">
-            <label for="firstName" class="form-label">First name<sup> *</sup></label>
+            <label for="firstName" class="form-label"
+              ><b>First name</b><sup> *</sup></label
+            >
             <input
               type="text"
               class="form-control"
@@ -39,14 +41,13 @@
               placeholder=""
               value=""
               [(ngModel)]="borrower.firstName"
-
-              [ngModelOptions]="{standalone:true}"
+              [ngModelOptions]="{ standalone: true }"
             />
             <div class="invalid-feedback">Valid first name is required.</div>
           </div>
 
           <div class="col-sm-6">
-            <label for="lastName" class="form-label">Last name</label>
+            <label for="lastName" class="form-label"><b>Last name</b></label>
             <input
               type="text"
               class="form-control"
@@ -54,77 +55,91 @@
               placeholder=""
               value=""
               [(ngModel)]="borrower.lastName"
-              [ngModelOptions]="{standalone:true}"
+              [ngModelOptions]="{ standalone: true }"
             />
             <div class="invalid-feedback">Valid last name is required.</div>
           </div>
 
           <div class="col-12">
-            <label for="email" class="form-label"> Username </label>
-            <input type="text" class="form-control" id="userName" [(ngModel)]="borrower.username" [ngModelOptions]="{standalone:true}" />
+            <label for="email" class="form-label"> <b>Username</b> </label>
+            <input
+              type="text"
+              class="form-control"
+              id="userName"
+              [(ngModel)]="borrower.username"
+              [ngModelOptions]="{ standalone: true }"
+            />
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
           </div>
 
           <div class="col-12">
-            <label for="password" class="form-label"> Password </label>
-            <input type="text" class="form-control" id="password" [(ngModel)]="borrower.password" [ngModelOptions]="{standalone:true}"/>
+            <label for="password" class="form-label"> <b>Password</b> </label>
+            <input
+              type="text"
+              class="form-control"
+              id="password"
+              [(ngModel)]="borrower.password"
+              [ngModelOptions]="{ standalone: true }"
+            />
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
           </div>
 
           <div class="col-12">
-            <label for="email" class="form-label">Email </label>
-            <input type="email" class="form-control" id="email" [(ngModel)]="borrower.email" [ngModelOptions]="{standalone:true}" />
+            <label for="email" class="form-label"><b>Email</b> </label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              [(ngModel)]="borrower.email"
+              [ngModelOptions]="{ standalone: true }"
+            />
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
           </div>
 
           <div class="col-12">
-            <label for="address" class="form-label">Address</label>
+            <label for="address" class="form-label"><b>Address</b></label>
             <input
               type="text"
               class="form-control"
               id="address"
               placeholder=""
               [(ngModel)]="borrower.address"
-              [ngModelOptions]="{standalone:true}"
+              [ngModelOptions]="{ standalone: true }"
             />
             <div class="invalid-feedback">
               Please enter your shipping address.
             </div>
           </div>
 
-         
-
           <div class="col-md-5">
-            <label for="country" class="form-label">Country</label>
+            <label for="country" class="form-label"><b>Country</b></label>
             <select class="form-select" id="country" required>
               <option value="">Choose...</option>
               <option
-                
                 (click)="setCountry(country)"
                 *ngFor="let country of contrieList"
               >
                 {{ country.flag }} {{ country.name.common }}
-                
               </option>
             </select>
             <div class="invalid-feedback">Please select a valid country.</div>
           </div>
 
           <div class="col-md-5">
-            <label for="state" class="form-label">Contact Number</label>
+            <label for="state" class="form-label"><b>Contact Number</b></label>
             <input
               type="text"
               class="form-control"
               id="contactNumber"
               placeholder=""
               [(ngModel)]="selectCountryCode"
-              [ngModelOptions]="{standalone:true}"
+              [ngModelOptions]="{ standalone: true }"
               [(ngModel)]="borrower.phoneNum"
             />
             <div class="invalid-feedback">Please provide a valid state.</div>
@@ -133,13 +148,25 @@
 
         <hr class="my-4" />
 
-        <div><button class="w-100 btn btn-primary btn-lg" type="submit" (click)="registerBorrower()">
-          Submit
-       </button></div>
- <br>
-        <div><button class="w-100 btn btn-secondary btn-lg" type="shadow" [routerLink]="['/login']">
-          Sign In
-       </button></div>
+        <div>
+          <button
+            class="w-100 btn btn-primary btn-lg"
+            type="submit"
+            (click)="registerBorrower()"
+          >
+            Submit
+          </button>
+        </div>
+        <br />
+        <div>
+          <button
+            class="w-100 btn btn-secondary btn-lg"
+            type="shadow"
+            [routerLink]="['/login']"
+          >
+            Sign In
+          </button>
+        </div>
       </form>
     </div>
   </div>
