creat add-book component

--- a/src/app/comman/header/header.component.html
+++ b/src/app/comman/header/header.component.html
@@ -8,9 +8,10 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/home" class="nav-link px-2 text-white ">Home</a></li>
-          <li><a href="/bookList" class="nav-link px-2 text-white">Book</a></li>
-          <li><a href="/borrowerList" class="nav-link px-2 text-white">Borrowers</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Staff</a></li>
+          <li><a href="/bookList" class="nav-link px-2 text-white">View All Book</a></li>
+          <li><a href="/borrowerList" class="nav-link px-2 text-white">View All Borrowers</a></li>
+          <li><a href="/addBook" class="nav-link px-2 text-white">Add Book</a></li>
+          <li><a href="" class="nav-link px-2 text-white">Borrow a Book</a></li>
      
         </ul>
 
