--- a/src/app/comman/side-bar/side-bar.component.html
+++ b/src/app/comman/side-bar/side-bar.component.html
@@ -28,7 +28,7 @@
           <use xlink:href="#speedometer2" />
         </svg>
         <i class="bi bi-book"></i>
-        Book
+        View All Book
       </a>
     </li>
     <li>
@@ -38,7 +38,7 @@
         </svg>
 
         <i class="bi bi-person"></i>
-        Borrowers
+        View All Borrowers
       </a>
     </li>
     <li>
