--- a/src/app/page/add-book/add-book.component.html
+++ b/src/app/page/add-book/add-book.component.html
@@ -5,8 +5,10 @@
 <div class="container">
   <br /><br />
   <form class="needs-validation shadow p-5 w-99 mx-auto py-5">
+    <h2 class="text-white">Add Book</h2>
+    <br>
     <div class="row">
-      <div class="col-6">
+     <div class="col-6">
         <div class="input-group has-validation">
           <span class="input-group-text text-black">ISBN</span>
           <input
